; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/alc/extr_if_alc.c_alc_aspm.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/alc/extr_if_alc.c_alc_aspm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.alc_softc = type { i32 }

@ALC_FLAG_AR816X_FAMILY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.alc_softc*, i32, i32)* @alc_aspm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @alc_aspm(%struct.alc_softc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.alc_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.alc_softc* %0, %struct.alc_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.alc_softc*, %struct.alc_softc** %4, align 8
  %8 = getelementptr inbounds %struct.alc_softc, %struct.alc_softc* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @ALC_FLAG_AR816X_FAMILY, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %3
  %14 = load %struct.alc_softc*, %struct.alc_softc** %4, align 8
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @alc_aspm_816x(%struct.alc_softc* %14, i32 %15)
  br label %21

17:                                               ; preds = %3
  %18 = load %struct.alc_softc*, %struct.alc_softc** %4, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @alc_aspm_813x(%struct.alc_softc* %18, i32 %19)
  br label %21

21:                                               ; preds = %17, %13
  ret void
}

declare dso_local i32 @alc_aspm_816x(%struct.alc_softc*, i32) #1

declare dso_local i32 @alc_aspm_813x(%struct.alc_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
